Modify default config

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
+# IMPORTANT: The first account will become the administrator. Register immediately after deployment.
+
 MYSQL_DB=who_am_i
 MYSQL_USER=who_am_i
 
 SECURE_DOMAINS=
-LOGIN=force
+LOGIN=
+COMMENT_AUDIT=true
 
 MARKDOWN_TEX=katex
 
