Update example config file

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,23 @@
 # IMPORTANT: The first account will become the administrator. Register immediately after deployment.
 
-MYSQL_DB=who_am_i
-MYSQL_USER=who_am_i
+MYSQL_DB=waline_comments
+MYSQL_USER=waline_comments
+MYSQL_PREFIX=wl_
 
-SECURE_DOMAINS=
+SECURE_DOMAINS=example.com
 LOGIN=
 COMMENT_AUDIT=true
 
 MARKDOWN_TEX=katex
+
+SMTP_HOST=mail.example.com
+SMTP_PORT=465
+SMTP_USER=noreply@example.com
+SMTP_SECURE=true
+SENDER_NAME=Comment System
+AUTHOR_EMAIL=webmaster@example.com
+SITE_NAME=Example Website
+SITE_URL=https://example.com/
 
 # SECRETS BELOW ↓
 
@@ -120,4 +130,5 @@ MARKDOWN_TEX=katex
 
 
 
-MYSQL_PASSWORD=rbhkoeqwfui2rhfhiqghi1eqleqefjnfnf3jnofio3fio31329o
+MYSQL_PASSWORD=
+SMTP_PASS=
