Remove trailing slash from site url

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ SMTP_SECURE=true
 SENDER_NAME=Comment System
 AUTHOR_EMAIL=webmaster@example.com
 SITE_NAME=Example Website
-SITE_URL=https://example.com/
+SITE_URL=https://example.com
 
 # SECRETS BELOW ↓
 
