Update according to last deployment

--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,22 @@
 
 MYSQL_DB=who_am_i
 MYSQL_USER=who_am_i
+MYSQL_PREFIX=
 
 SECURE_DOMAINS=
 LOGIN=
 COMMENT_AUDIT=true
 
 MARKDOWN_TEX=katex
+
+SMTP_HOST=mx.example.com
+SMTP_PORT=465
+SMTP_USER=comments.noreply@example.com
+SMTP_SECURE=true
+SENDER_NAME=Comment System
+AUTHOR_EMAIL=webmaster@example.com
+SITE_NAME=My Blog
+SITE_URL=https://example.com
 
 # SECRETS BELOW ↓
 
@@ -120,4 +130,5 @@ MARKDOWN_TEX=katex
 
 
 
-MYSQL_PASSWORD=rbhkoeqwfui2rhfhiqghi1eqleqefjnfnf3jnofio3fio31329o
+MYSQL_PASSWORD=DO_NOT_USE_DEFAULT
+SMTP_PASS=DO_NOT_USE_DEFAULT
