Add MYSQL_HOST and MYSQL_PORT in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # IMPORTANT: The first account will become the administrator. Register immediately after deployment.
 
+MYSQL_HOST=127.0.0.1
+MYSQL_PORT=3306
 MYSQL_DB=waline_comments
 MYSQL_USER=waline_comments
 MYSQL_PREFIX=wl_
